src/facade/rust/src/bridge/node.rs


	// ---- include/node/block.h -----------------------------------------------
	/// `oaknode_block_clip_create` — new clip block, refcount 1.
	pub fn oaknode_block_clip_create() -> CHandle;
	/// `oaknode_block_gap_create` — new gap block, refcount 1.
	pub fn oaknode_block_gap_create() -> CHandle;
	/// `oaknode_block_transition_create` — new transition block, refcount 1.
	pub fn oaknode_block_transition_create(kind: c_int) -> CHandle;
	/// `oaknode_block_free` — NULL/empty no-op.
	pub fn oaknode_block_free(block: *mut CHandle);
	/// `oaknode_block_get_kind`.
	pub fn oaknode_block_get_kind(block: CHandle, out_kind: *mut c_int) -> c_int;
	/// `oaknode_block_as_node` — block viewed as a node.
	pub fn oaknode_block_as_node(block: CHandle) -> CHandle;
	/// `oaknode_block_from_node` — node viewed as a block.
	pub fn oaknode_block_from_node(node: CHandle) -> CHandle;
	/// `oaknode_block_get_in` — rational seconds.
	pub fn oaknode_block_get_in(block: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_block_set_in` — rational seconds.
	pub fn oaknode_block_set_in(block: CHandle, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_block_get_out` — rational seconds.
	pub fn oaknode_block_get_out(block: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_block_set_out` — rational seconds.
	pub fn oaknode_block_set_out(block: CHandle, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_block_get_length` — rational seconds.
	pub fn oaknode_block_get_length(block: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_block_set_length_and_media_out`.
	pub fn oaknode_block_set_length_and_media_out(block: CHandle, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_block_set_length_and_media_in`.
	pub fn oaknode_block_set_length_and_media_in(block: CHandle, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_block_get_enabled`.
	pub fn oaknode_block_get_enabled(block: CHandle, enabled: *mut c_int) -> c_int;
	/// `oaknode_block_set_enabled`.
	pub fn oaknode_block_set_enabled(block: CHandle, enabled: c_int) -> c_int;
	/// `oaknode_block_get_previous` — borrowed block handle out.
	pub fn oaknode_block_get_previous(block: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_block_get_next` — borrowed block handle out.
	pub fn oaknode_block_get_next(block: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_block_get_track` — borrowed track handle out.
	pub fn oaknode_block_get_track(block: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_block_link` — live.
	pub fn oaknode_block_link(a: CHandle, b: CHandle) -> c_int;
	/// `oaknode_block_unlink` — live.
	pub fn oaknode_block_unlink(a: CHandle, b: CHandle) -> c_int;
	/// `oaknode_block_are_linked`.
	pub fn oaknode_block_are_linked(a: CHandle, b: CHandle, linked: *mut c_int) -> c_int;
	/// `oaknode_block_get_link_count`.
	pub fn oaknode_block_get_link_count(block: CHandle, count: *mut c_int) -> c_int;
	/// `oaknode_block_get_link_at` — borrowed block handle out.
	pub fn oaknode_block_get_link_at(block: CHandle, index: c_int, out: *mut CHandle) -> c_int;
	/// `oaknode_clip_get_media_in` — rational seconds.
	pub fn oaknode_clip_get_media_in(clip: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_clip_set_media_in` — rational seconds.
	pub fn oaknode_clip_set_media_in(clip: CHandle, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_clip_get_speed`.
	pub fn oaknode_clip_get_speed(clip: CHandle, speed: *mut f64) -> c_int;
	/// `oaknode_clip_set_speed`.
	pub fn oaknode_clip_set_speed(clip: CHandle, speed: f64) -> c_int;
	/// `oaknode_clip_get_reverse`.
	pub fn oaknode_clip_get_reverse(clip: CHandle, reverse: *mut c_int) -> c_int;
	/// `oaknode_clip_set_reverse`.
	pub fn oaknode_clip_set_reverse(clip: CHandle, reverse: c_int) -> c_int;
	/// `oaknode_clip_get_maintain_audio_pitch`.
	pub fn oaknode_clip_get_maintain_audio_pitch(clip: CHandle, maintain: *mut c_int) -> c_int;
	/// `oaknode_clip_set_maintain_audio_pitch`.
	pub fn oaknode_clip_set_maintain_audio_pitch(clip: CHandle, maintain: c_int) -> c_int;
	/// `oaknode_clip_get_loop_mode`.
	pub fn oaknode_clip_get_loop_mode(clip: CHandle, loop_mode: *mut c_int) -> c_int;
	/// `oaknode_clip_set_loop_mode`.
	pub fn oaknode_clip_set_loop_mode(clip: CHandle, loop_mode: c_int) -> c_int;
	/// `oaknode_clip_get_track_type`.
	pub fn oaknode_clip_get_track_type(clip: CHandle, type_: *mut c_int) -> c_int;
	/// `oaknode_transition_get_in_offset` — rational seconds.
	pub fn oaknode_transition_get_in_offset(transition: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_transition_get_out_offset` — rational seconds.
	pub fn oaknode_transition_get_out_offset(transition: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_transition_get_offset_center` — rational seconds.
	pub fn oaknode_transition_get_offset_center(transition: CHandle, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_transition_set_offset_center`.
	pub fn oaknode_transition_set_offset_center(transition: CHandle, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_transition_set_offsets_and_length`.
	pub fn oaknode_transition_set_offsets_and_length(
		transition: CHandle,
		in_num: c_int,
		in_den: c_int,
		out_num: c_int,
		out_den: c_int,
	) -> c_int;
	/// `oaknode_transition_is_dual`.
	pub fn oaknode_transition_is_dual(transition: CHandle, dual: *mut c_int) -> c_int;
	/// `oaknode_transition_get_connected_out_block` — borrowed block handle out.
	pub fn oaknode_transition_get_connected_out_block(transition: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_transition_get_connected_in_block` — borrowed block handle out.
	pub fn oaknode_transition_get_connected_in_block(transition: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_clip_add_cache_passthrough_from`.
	pub fn oaknode_clip_add_cache_passthrough_from(clip: CHandle, other: CHandle) -> c_int;

	// ---- include/node/colormanager.h ----------------------------------------
	/// `oaknode_colormanager_init` — manager for a project, refcount 1.
	pub fn oaknode_colormanager_init(project: CHandle) -> CHandle;
	/// `oaknode_colormanager_free` — NULL/empty no-op.
	pub fn oaknode_colormanager_free(manager: *mut CHandle);
	/// `oaknode_colormanager_wrap_borrowed` — wrap a native manager pointer.
	pub fn oaknode_colormanager_wrap_borrowed(native_manager: *mut c_void) -> CHandle;
	/// `oaknode_colormanager_initialize`.
	pub fn oaknode_colormanager_initialize(manager: CHandle) -> c_int;
	/// `oaknode_colormanager_set_up_default_config`.
	pub fn oaknode_colormanager_set_up_default_config() -> c_int;
	/// `oaknode_colormanager_get_config_filename` (two-stage string).
	pub fn oaknode_colormanager_get_config_filename(manager: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_set_config_filename`.
	pub fn oaknode_colormanager_set_config_filename(manager: CHandle, filename: *const c_char) -> c_int;
	/// `oaknode_colormanager_update_config_from_filename`.
	pub fn oaknode_colormanager_update_config_from_filename(manager: CHandle) -> c_int;
	/// `oaknode_colormanager_get_default_input_color_space` (two-stage string).
	pub fn oaknode_colormanager_get_default_input_color_space(manager: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_set_default_input_color_space`.
	pub fn oaknode_colormanager_set_default_input_color_space(manager: CHandle, colorspace: *const c_char) -> c_int;
	/// `oaknode_colormanager_get_reference_color_space` (two-stage string).
	pub fn oaknode_colormanager_get_reference_color_space(manager: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_get_compliant_color_space` (two-stage string).
	pub fn oaknode_colormanager_get_compliant_color_space(
		manager: CHandle,
		colorspace: *const c_char,
		buf: *mut c_char,
		buf_size: c_int,
	) -> c_int;
	/// `oaknode_colormanager_get_colorspace_for_ffmpeg_tags` (two-stage string).
	pub fn oaknode_colormanager_get_colorspace_for_ffmpeg_tags(
		manager: CHandle,
		primaries: c_int,
		trc: c_int,
		buf: *mut c_char,
		buf_size: c_int,
	) -> c_int;
	/// `oaknode_colormanager_get_display_count`.
	pub fn oaknode_colormanager_get_display_count(manager: CHandle, count: *mut c_int) -> c_int;
	/// `oaknode_colormanager_get_display_at` (two-stage string).
	pub fn oaknode_colormanager_get_display_at(manager: CHandle, index: c_int, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_get_default_display` (two-stage string).
	pub fn oaknode_colormanager_get_default_display(manager: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_get_view_count`.
	pub fn oaknode_colormanager_get_view_count(manager: CHandle, display: *const c_char, count: *mut c_int) -> c_int;
	/// `oaknode_colormanager_get_view_at` (two-stage string).
	pub fn oaknode_colormanager_get_view_at(
		manager: CHandle,
		display: *const c_char,
		index: c_int,
		buf: *mut c_char,
		buf_size: c_int,
	) -> c_int;
	/// `oaknode_colormanager_get_default_view` (two-stage string).
	pub fn oaknode_colormanager_get_default_view(manager: CHandle, display: *const c_char, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_get_look_count`.
	pub fn oaknode_colormanager_get_look_count(manager: CHandle, count: *mut c_int) -> c_int;
	/// `oaknode_colormanager_get_look_at` (two-stage string).
	pub fn oaknode_colormanager_get_look_at(manager: CHandle, index: c_int, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_get_colorspace_count`.
	pub fn oaknode_colormanager_get_colorspace_count(manager: CHandle, count: *mut c_int) -> c_int;
	/// `oaknode_colormanager_get_colorspace_at` (two-stage string).
	pub fn oaknode_colormanager_get_colorspace_at(manager: CHandle, index: c_int, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_colormanager_get_default_luma_coefs`.
	pub fn oaknode_colormanager_get_default_luma_coefs(manager: CHandle, rgb: *mut f64) -> c_int;
	/// `oaknode_colormanager_get_compliant_color_transform` — transform handle out.
	pub fn oaknode_colormanager_get_compliant_color_transform(
		manager: CHandle,
		transform: CHandle,
		force_display: c_int,
		out: *mut CHandle,
	) -> c_int;

	// ---- include/node/traverser.h -------------------------------------------
	/// `oaknode_traverser_init` — new traverser, refcount 1.
	pub fn oaknode_traverser_init() -> CHandle;
	/// `oaknode_traverser_free` — NULL/empty no-op.
	pub fn oaknode_traverser_free(traverser: *mut CHandle);
	/// `oaknode_traverser_generate_database` — value database handle out.
	pub fn oaknode_traverser_generate_database(
		traverser: CHandle,
		node: CHandle,
		in_num: i64,
		in_den: i64,
		out_num: i64,
		out_den: i64,
		out_db: *mut CHandle,
	) -> c_int;
	/// `oaknode_traverser_database_free` — NULL/empty no-op.
	pub fn oaknode_traverser_database_free(db: *mut CHandle);
	/// `oaknode_traverser_database_row_count`.
	pub fn oaknode_traverser_database_row_count(db: CHandle, out_count: *mut c_int) -> c_int;
	/// `oaknode_traverser_database_row_key_at` (two-stage string).
	pub fn oaknode_traverser_database_row_key_at(db: CHandle, index: c_int, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_traverser_database_row_value_count`.
	pub fn oaknode_traverser_database_row_value_count(db: CHandle, key: *const c_char, out_count: *mut c_int) -> c_int;
	/// `oaknode_traverser_database_value_at` — POD out.
	pub fn oaknode_traverser_database_value_at(
		db: CHandle,
		key: *const c_char,
		index: c_int,
		out: *mut crate::node::OakNodeValue,
	) -> c_int;
	/// `oaknode_traverser_database_value_string_at` (two-stage string).
	pub fn oaknode_traverser_database_value_string_at(
		db: CHandle,
		key: *const c_char,
		index: c_int,
		buf: *mut c_char,
		buf_size: c_int,
	) -> c_int;
